# TaskManager-by-FastAPI

./: .gitignore  README.md  pyproject.toml  run.py
app/api/: routes.py
app/api/user_routes/: user_auth.py
app/core/: config.py  database.py  enums.py  logger.py  main.py  response_classes.py
app/dal/: user_dal.py
app/models/: declarative_model.py  user_model.py
app/schemas/user/: user_schema.py
app/services/: user_service.py
app/utils/: common_methods.py  dependencies.py  response_classes.py  token_service.py
docs/: architecture.md
