[project]
name = "taskmanager-fa"
version = "0.1"
description = ""
authors = [
    {name = "nsnasyjrov"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi>=0.120.0,<1.0.0",
    "uvicorn>=0.38.0,<1.0.0",
    "pydantic>=2.12.3,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
    "starlette>=0.48.0,<1.0.0",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
